fixed whitespace error in edu section

--- a/css/scrolling-nav.css
+++ b/css/scrolling-nav.css
@@ -460,7 +460,6 @@ h4 {
 
 .edu-list-item {
     font-size: 16px;
-    white-space: pre;
 }
 
 .ncp{
